# super_legal_platform

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPROVEMENTS_SUMMARY.md  INTEGRATION_COMPLETE.md  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  prompt-check.yml
backend/: .env.example  Dockerfile  alembic.ini  app.py  config.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: README.md
backend/api/: document.py  document_processing.py  education.py  generation.py  research.py  user.py
backend/modules/: api_models.py  auth_enhanced.py  database.py  database_enhanced.py  document_processing.py  error_handler.py  prompt_templates.py  security.py
docs/: CHANGELOG.md  external_integration_plan.md
frontend/: .env.example  Dockerfile  index.html  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/demo/: README.md  index.html  package.json
frontend/demo/src/: App.tsx
frontend/demo/src/components/: CreditDispute.tsx  FlowDiagram.tsx
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/tests/: auth.spec.ts  documents.spec.ts  generation.spec.ts
scripts/: check_prompts.py
tests/: conftest.py  test_auth.py  test_document_processing_integration.py  test_documents.py  test_education.py  test_generation.py  test_performance.py  test_prompt_adapter.py  test_prompt_templates.py  test_research.py  test_security.py  utils.py
