[tool.poetry]
name = "sovereign-legal-platform"
version = "1.0.0"
description = "Comprehensive legal technology platform for document processing, education, and research"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "backend"},
    {include = "packages"}
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
redis = "^5.0.1"
celery = "^5.3.4"
pillow = "^10.1.0"
pypdf2 = "^3.0.1"
pdfplumber = "^0.10.3"
pytesseract = "^0.3.10"
reportlab = "^4.0.7"
jinja2 = "^3.1.2"
bleach = "^6.1.0"
validators = "^0.22.0"
cryptography = "^41.0.8"
slowapi = "^0.1.9"
email-validator = "^2.1.0"
aiofiles = "^23.2.1"
prometheus-client = "^0.19.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
spacy = "^3.7.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
nltk = "^3.8.0"
transformers = "^4.30.0"
torch = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --cov=backend --cov=packages --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
    "slowapi.*",
    "prometheus_client.*",
]
ignore_missing_imports = true